Fix footer and hero on mobile and desktop

--- a/css/style.css
+++ b/css/style.css
@@ -119,17 +119,8 @@ img {
   padding: 4rem 4rem;
   z-index: 30;
   background-color: #000;
-  animation: fadein 0.5s ease;
 }
 
-@keyframes fadein {
-  0% {
-    margin-left: 100vw;
-  }
-  100% {
-    margin-left: 0px;
-  }
-}
 
 .hidden-menu > ul > li {
   list-style: none;
@@ -297,17 +288,18 @@ img {
 }
 
 .mobile-btn {
-  height: 3rem;
-  width: 9rem;
+  height: 5rem;
+  width: 16rem;
   font-family: "Josefin Sans";
   text-transform: uppercase;
   background-color: #fff;
+  padding:1rem;
+  margin:2rem 0;
   color: #000;
   font-weight: bold;
-  font-size: 0.8rem;
+  font-size: 1.5rem;
   letter-spacing: 0.2rem;
-  border: 0.1rem solid #000;
-  border-radius: 0.1rem;
+  border: 0.2rem solid #000;
 }
 
 .mobile-btn:hover {
@@ -326,7 +318,8 @@ footer {
 
 .footer-title {
   font-family: "Alata";
-  margin-bottom: 2rem;
+  font-size: 3rem;
+  margin-bottom: 3rem;
 }
 
 .footer-nav {
@@ -338,11 +331,18 @@ footer {
 
 .footer-nav li {
   list-style: none;
-  font-size: 1.2rem;
+  font-size: 2rem;
 }
 
 .footer-nav li:not(:last-child) {
   margin-bottom: 2rem;
+}
+
+.footer-right {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
 }
 
 .social-media {
@@ -351,12 +351,18 @@ footer {
   justify-content: space-around;
   align-items: center;
   margin-top: 4rem;
-  width: 45%;
+  width: 100%;
+}
+
+.social-media > .nav-link > img {
+  width:40px;
+  height: 40px;
 }
 
 .copyright {
-  margin-top: 2rem;
+  margin-top: 3rem;
   font-family: "Josefin Sans";
+  font-size: 1.5rem;
 }
 /* utils */
 .text-lg {
@@ -367,18 +373,6 @@ footer {
   display: none;
 }
 
-.fade-right {
-  animation: faderight 0.5s ease;
-}
-
-@keyframes faderight {
-  0% {
-    margin-left: 0;
-  }
-  100% {
-    margin-left: 100vw;
-  }
-}
 
 /* responsive */
 @media only screen and (min-width: 1024px) {
@@ -434,6 +428,7 @@ footer {
   .hero {
     width: 55%;
     height: auto;
+    margin-top: 100px;
   }
 
   .hero-text {
@@ -477,6 +472,7 @@ footer {
 
   .showcase-detail {
     text-align: left;
+    font-size: 1rem;
   }
 
   .products {
@@ -632,6 +628,11 @@ footer {
     width: 65%;
   }
 
+  .social-media > .nav-link > img {
+      width:20px;
+      height: 20px;
+    }
+
   .footer-right {
     display: flex;
     flex-direction: column;
@@ -642,5 +643,6 @@ footer {
 
   .copyright {
     margin-top: 0;
+    font-size: 1rem;
   }
 }
